# svOneDSolver

./: .gitignore  .travis.yml  CMakeLists.txt  Glossary  LICENSE  README.md
.github/workflows/: build.yml  test.yml
BuildWithMake/: .gitignore  Makefile  Makefile.cygwin  Makefile.cygwin~  Makefile.darwin  build_windows_github.bat  include.mk  windows-build.sh
BuildWithMake/Release/: Makefile
BuildWithMake/Release/developer_wrapper_scripts/: developer-core-script
BuildWithMake/Release/linux_wrapper_scripts/: linux-dist-core-script
BuildWithMake/Release/windows_installer_packages/: .wix-simvascular-svsolver-bundle.wxs.swp  wix-simvascular-svonedsolver-bundle.wxs  wix-simvascular-svonedsolver-bundle.wxs~
BuildWithMake/Release/windows_msi_helpers/: makewxs-svonedsolver.tcl  makewxs-svonedsolver.tcl~
BuildWithMake/Release/windows_wrapper_scripts/: windows-dist-core-script
Code/Source/: cvOneDBFSolver.cxx  cvOneDBFSolver.h  cvOneDComplex.cxx  cvOneDComplex.h  cvOneDDataTable.cxx  cvOneDDataTable.h  cvOneDDenseMatrix.cxx  cvOneDDenseMatrix.h  cvOneDEnums.h  cvOneDError.cxx  cvOneDError.h  cvOneDException.cxx  cvOneDException.h  cvOneDFEAJoint.h  cvOneDFEAMatrix.cpp  cvOneDFEAMatrix.cxx  cvOneDFEAMatrix.h  cvOneDFEAVector.cxx  cvOneDFEAVector.h  cvOneDFiniteElement.cxx  cvOneDFiniteElement.h  cvOneDGlobal.cpp  cvOneDGlobal.cxx  cvOneDGlobal.h  cvOneDJoint.h  cvOneDLinearSolver.cxx  cvOneDLinearSolver.h  cvOneDMaterial.h  cvOneDMaterialLinear.cxx  cvOneDMaterialLinear.h  cvOneDMaterialManager.cxx  cvOneDMaterialManager.h  cvOneDMaterialOlufsen.cxx  cvOneDMaterialOlufsen.h  cvOneDMatrix.h  cvOneDMesh.h  cvOneDModel.cpp  cvOneDModel.cxx  cvOneDModel.h  cvOneDModelManager.cpp  (+32 more)
Code/Source/sparse/: cvOneDSparseLinearSolver.cxx  cvOneDSparseLinearSolver.h  cvOneDSparseMatrix.cpp  cvOneDSparseMatrix.cxx  cvOneDSparseMatrix.h
Code/Source/sparse/csparse/: csparse.c  csparse.h  csparseSolve.cpp  csparseSolve.cxx  csparseSolve.h
Code/Source/sparse/superlu/: pdutil.c  sp_ienv.c  st_to_cc.cxx  st_to_cc.h  superLUSolve.cpp  superLUSolve.cxx  superLUSolve.h
Distribution/: CMakeLists.txt  setup-linux.in  setup-macos.in
build_skyline/: CMakeCache.txt  Makefile  cmake_install.cmake
build_skyline/Code/Source/: Makefile  cmake_install.cmake
cmake/: External_PCRE.cmake  SimVascularMacros.cmake  SimVascularSystemSetup.cmake  UseSWIG.cmake  installSwig.cmake  pcre_configure_step.cmake.in  swig_configure_step.cmake.in
docs/: CMakeLists.txt
docs/source/: conf.py.in  index.rst
docs/source/content/: about.rst  inputFileGuide.rst  installation.rst  pythonScripting.rst  test_bifurcation_rcr.rst  test_tube_r.rst  theory.rst  tut_aortoFemoral.rst  tut_bifurcation.rst  tut_carotid.rst  tut_magellan.rst  tut_simpleArtery.rst  tutorials.rst  userGuide.rst
py/: CMakeLists.txt  oneDSolver.tmp
py/scripts/: fileTemplate.py  runParallelSolver.py  simResultRecord.py  testRunSolver.py
src/: CMakeLists.txt  cvOneDBFSolver.cpp  cvOneDBFSolver.h  cvOneDClosedLoop.cpp  cvOneDClosedLoop.h  cvOneDComplex.cpp  cvOneDComplex.h  cvOneDDataTable.cpp  cvOneDDataTable.h  cvOneDDenseMatrix.cpp  cvOneDDenseMatrix.h  cvOneDEnums.h  cvOneDError.cpp  cvOneDError.h  cvOneDException.cpp  cvOneDException.h  cvOneDFEAJoint.h  cvOneDFEAMatrix.cpp  cvOneDFEAMatrix.h  cvOneDFEAVector.cpp  cvOneDFEAVector.h  cvOneDFiniteElement.cpp  cvOneDFiniteElement.h  cvOneDGlobal.cpp  cvOneDGlobal.h  cvOneDJoint.h  cvOneDLinearSolver.cpp  cvOneDLinearSolver.h  cvOneDMaterial.h  cvOneDMaterialLinear.cpp  cvOneDMaterialLinear.h  cvOneDMaterialManager.cpp  cvOneDMaterialManager.h  cvOneDMaterialOlufsen.cpp  cvOneDMaterialOlufsen.h  cvOneDMatrix.h  cvOneDMesh.h  cvOneDMetteImpedance.cpp  cvOneDMetteImpedance.h  cvOneDModel.cpp  (+32 more)
src/sparse/: cvOneDSparseLinearSolver.cpp  cvOneDSparseLinearSolver.h  cvOneDSparseMatrix.cpp  cvOneDSparseMatrix.h
src/sparse/superlu/: st_to_cc.cpp
test/: 01_simpleArtery_Flow.in  03_simpleArtery_Admittance.in  06_bifurcation_Impedance.in  07_bifurcation_Wave.in  09_carotid_Admittance.in  10_carotid_Flow.in  12_AortoFem_Pulse_R.in  13_AortoFem_Steady_RCR.in  15_magellan_impedance_exercise.in  1D_input_file.tmpl  Left_coronary_inlet_pressure_wave_outlet_coronary.in  bifurcation_P.in  bifurcation_R.in  bifurcation_RCR.in  bifurcation_RCR_staticFunc.in  bifurcation_R_adv.in  bifurcation_R_stab.in  plots.py  plottingExample.m  run_tests.py  tube_pressure.in  tube_r.in  tube_r_Pd.in  tube_r_Pd.inp  tube_r_adv.in  tube_r_stab.in  tube_rcr.in  tube_rcr_Pd.in  tube_rcr_Pd.inp  tube_stenosis_r.in
test/closedloop/: PA_2bif_25FE.in  plotRes.py
test/closedloop/GenBC_LPN/: GenBC0D1D.cpp  GenBC0D1D.h  PA_2bif_25FE.in  global.h  main.cpp  userLPN.cpp  userLPN.h
test/openloop/: 01_simpleArtery_Flow_1D.tmpl  01_simpleArtery_Flow_2D.tmpl  05_bifurcation_RCR.in  08_carotid_Resistance.in  11_AortoFem_Steady_R.in  14_AortoFem_Pulse_RCR.in  plottingExample.m
tests/: conftest.py  test_integration.py
tests/cases/: 02_simpleArtery_Resistance.in  04_simpleArtery_Pressure.in  bifurcation_P.in  bifurcation_R.in  bifurcation_R_linear.in  tube_pressure.in  tube_pressure_linear.in  tube_pressure_outflow.in  tube_pressure_outflow_linear.in  tube_pressure_wave.in  tube_r_Pd.in  tube_r_stab_linear.in  tube_rcr.in
travis/: travis_build.sh  travis_cmake_config.sh  travis_result_test.sh
