# BUILD PYTHON MODULES
FIND_PACKAGE(SWIG)

IF(SWIG_FOUND)
  
  INCLUDE(UseSWIG)

  FIND_PACKAGE(PythonLibs 3)

  MESSAGE(STATUS "Python Library Version: ${PYTHONLIBS_VERSION_STRING}")

  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

  INCLUDE_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}/src"
    "${CMAKE_SOURCE_DIR}/src/sparse"
    "${CMAKE_SOURCE_DIR}/py")

  SET(CMAKE_SWIG_FLAGS "-Wall")

  SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/py)

  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/py)

  SET_SOURCE_FILES_PROPERTIES(${ONED_SRC_I} PROPERTIES CPLUSPLUS ON)

  SWIG_ADD_MODULE(oneDSolver python ${ONED_SRC_I})

  ADD_LIBRARY(onedsolver STATIC ${SRC_C})

  SWIG_LINK_LIBRARIES(oneDSolver onedsolver ${PYTHON_LIBRARIES})
  
  # COPY ALL PYTHON FILES TO THE PY FOLDER
  file(GLOB pyFiles "${CMAKE_SOURCE_DIR}/py/*.*")
  file(COPY ${pyFiles} DESTINATION ${CMAKE_BINARY_DIR}/py/)
  
ENDIF()
